--- a/Cargo.toml
+++ b/Cargo.toml
@@ -11,6 +11,7 @@ aoc-runner-derive = "0.3"
 askama = "0.14.0"
 clap = { version = "4.5.53", features = ["derive"] }
 dp_macro = "0.3.2"
+good_lp = { version = "1.14.2", features = ["minilp"], default-features = false }
 indexmap = "2.12.1"
 indoc = "2.0.7"
 itertools = "0.14.0"
